<resources>
    <string name="app_name">设置</string>
    <string name="scl_door_unlock">所有车门|驾驶员车门</string>
    <string name="scl_lock_control">门锁控制</string>
    <string name="spv_lock_control">随速闭锁</string>
    <string name="spv_car_windows">锁车自动关窗</string>
    <string name="spv_rearview">锁车外后视镜自动折叠</string>
    <string name="spv_seat">座椅迎宾退让</string>
    <string name="spv_belt">后排安全带提醒</string>
    <string name="door_unlock">遥控解锁</string>
    <string name="language_type">中文|English</string>
    <string name="time_type">24小时|12小时</string>
    <string name="bluetooth_switch">蓝牙</string>
    <string name="edit_blt_name">修改</string>
    <string name="add_blt_devices">添加蓝牙设备</string>
    <string name="manage_matched_devices">管理配对设备</string>
    <string name="time_remain">取消配对(%1$dS)</string>
    <string name="click_and_add_device">点击添加设备按钮，车机蓝牙将处于激活状态</string>
    <string name="add_device">添加设备</string>
    <string name="matching_check_phone">系统正在为您的设备进行匹配，请在设备中连接车机蓝牙</string>
    <string name="blt_open_not_authorization">蓝牙打开未授权</string>
    <string name="blt_connect_success">蓝牙连接成功</string>
    <string name="default_blt_name">默认蓝牙名称</string>
    <string name="please_input_blt_name">请输入蓝牙名称</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="sound_effects_mode_options">标准|流行|古典|爵士|自定义</string>
    <string name="arkamys_3d_options">全部乘客|驾驶员|关闭</string>
    <string name="on_off_music">开关机音乐</string>
    <string name="car_info_sound">车辆信息音</string>
    <string name="car_info_sound_options">一级|二级</string>
    <string name="car_speed_volume_compensate">车速音量补偿</string>
    <string name="car_speed_volume_compensate_hint">（调节“车速音量补偿”可降低因车速带来的噪音）</string>
    <string name="car_speed_volume_compensate_options">关闭|一级|二级|三级</string>
    <string name="park_media_volume">泊车媒体音量</string>
    <string name="park_media_volume_options">静音|弱化|正常</string>
    <string name="media_volume">媒体音量</string>
    <string name="bluetooth_music">蓝牙音乐</string>
    <string name="call_volume">通话音量</string>
    <string name="speech_volume">语音音量</string>
    <string name="Arkamys_3D_sound_effect">Arkamys 3D音效</string>
    <string name="sound_effects_mode">音效模式</string>
    <string name="sound_field_mode">声场模式</string>
    <string name="sound_field_mode_options">标准|歌剧院|音乐厅</string>
    <string name="main_driving_position">主驾驶位</string>
    <string name="copilot_seat">副驾驶位</string>
    <string name="back_left">后排左边</string>
    <string name="back_right">后排右边</string>
    <string name="section_50Hz">50HZ</string>
    <string name="section_200Hz">200HZ</string>
    <string name="section_800Hz">800HZ</string>
    <string name="section_3200Hz">3200HZ</string>
    <string name="section_10000Hz">10000HZ</string>
    <string name="decibel_value">%ddB</string>
    <string name="toast_no_new_version">暂无新版本更新</string>
    <string name="log_lock_control">随速闭锁:</string>
    <string name="log_car_window">车窗控制:</string>
    <string name="log_rearview_mirror">后视镜控制:</string>
    <string name="log_seat">座椅迎宾:</string>
    <string name="log_seat_belt">安全带:</string>
    <string name="log_auto_close_window">锁车自动关窗:</string>
    <string name="log_brake">主动制动:</string>
    <string name="log_lane">车道偏离:</string>
    <string name="log_lane_keep">道路保持:</string>
    <string name="log_isa">ISA交通标志识别:</string>
    <string name="log_ihc">IHC智能远光:</string>
    <string name="log_daw">驾驶员注意力提醒:</string>
    <string name="log_start_stop">怠速起停:</string>
    <string name="wifi_connection">WIFI连接</string>
    <string name="wifi_hot_spot">WIFI热点</string>
    <string name="wifi_switch">WIFI网络</string>
    <string name="searching_wifi">正在搜索wifi网络</string>
    <string name="error_operate_failed">异常情况，操作失败</string>
    <string name="log_sound_effect_mode">音效模式: </string>
    <string name="custom_sound_effects_settings">自定义音效设置: index=%d, value=%d</string>
    <string name="log_sound_effect_position">最佳听音位: </string>
    <string name="log_sound_effect_position_at_any_point">最佳听音位（任意点）: </string>
    <string name="log_back_home">回家模式:</string>
    <string name="log_leave_home">离家模式:</string>
    <string name="log_leave_light">离车登车灯光律动:</string>
    <string name="log_indoor_light">室内灯延时:</string>
    <string name="log_welcome_light">迎宾灯:</string>
    <string name="log_back_light">背光:</string>
    <string name="log_set_ambient_light">氛围灯:</string>
    <string name="please_input_psw">请输入%1$s密码</string>
    <string name="wrong_psw">密码错误</string>
    <string name="is_connecting">正在连接中...</string>
    <string name="wifi_connect_success">wifi连接成功</string>
    <string name="wifi_connect_failed">连接失败,请重新连接</string>
    <string name="close">关闭</string>
    <string name="name_wrong_psw">网络"%1$s"密码错误</string>
    <string name="connection_interrupt">连接已断开</string>
    <string name="log_authenticating">正在验证身份信息...</string>
    <string name="log_obtaining_ipaddr">正在获取IP地址...</string>
    <string name="log_logcat_tips">日志打印结果：</string>
    <string name="hotspot_name">热点名称</string>
    <string name="default_hotspot_name">D058</string>
    <string name="hotspot_psw">热点密码</string>
    <string name="default_hotspot_psw">12345678</string>
    <string name="need_length_8">需要输入8个字符</string>
    <string name="connected_amount">%1$d人已连接</string>
    <string name="please_input_hotspot_psw">请输入热点密码</string>
    <string name="please_input_hotspot_name">请输入热点名称</string>
    <string name="enable_gps_before_open_wifi">您需要打开定位才能打开wifi</string>
    <string name="log_open_hotspot_success">开启wifi热点成功</string>
    <string name="log_open_hotspot_fail">wifi热点开启失败</string>
    <string name="notification">提示</string>
    <string name="confirm_pin">请确认手机上的识别码是否与此相符\n%1$s</string>
    <string name="in_pairing_remain">正在配对中(%1$d)...</string>
    <string name="pair_failed">配对失败</string>
    <string name="brightness">亮度</string>
    <string name="brightness_control">屏幕亮度调节</string>
    <string name="key_brightness_control">按键亮度调节</string>
    <string name="brightness_control_type">自动|白天|黑夜</string>
    <string name="theme_control_type">模式1|模式2|模式3</string>
    <string name="ban_video_type">禁止|允许</string>
    <string name="ban_add_subtract">-|+</string>
    <string name="log_blt_unbond">蓝牙未绑定</string>
    <string name="log_blt_bonding">蓝牙绑定中</string>
    <string name="log_blt_bonded">蓝牙已绑定</string>
    <string name="log_request_bond">蓝牙请求绑定中</string>
    <string name="connect_blt">连接蓝牙...</string>
    <string name="disconnect_blt">断开蓝牙...</string>
    <string name="disconnect_blt_success">蓝牙已断开连接</string>
    <string name="safety_brake_title">前防撞预警/主动制动</string>
    <string name="safety_brake_text">低|中|高</string>
    <string name="safety_lane_title">车道偏离警示</string>
    <string name="safety_lane_text">低|中|高</string>
    <string name="safety_keep_title">车道保持模式</string>
    <string name="safety_keep_text">偏离警示|纠偏保持|居中保持</string>
    <string name="safety_isa">交通标志识别</string>
    <string name="safety_daw">驾驶员注意力提醒</string>
    <string name="safety_seat_belt">后排安全带提醒</string>
    <string name="spv_unlock_control">熄火自动解锁</string>
    <string name="log_leave_auto_lock">离车自动落锁</string>
    <string name="setting_tips">请先启动发动机</string>
    <string name="spv_trunk">感应式行李箱盖</string>
    <string name="log_trunk">行李箱智能开启：</string>
    <string name="tips_reset">正在复位</string>
    <string name="tips_reset_success">复位成功</string>
    <string name="tips_reset_error">复位失败</string>
    <string name="chess_position">前%d左%d</string>
    <string name="on_off_music_options">ON|OFF</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="switch_options">ON|OFF</string>
    <string name="setting_power_text">ON|OFF</string>
    <string name="setting_item_go_home">伴我回家</string>
    <string name="setting_item_go_home_opt">10S|20S|30S</string>
    <string name="setting_item_leave_light">离车登车灯光律动</string>
    <string name="setting_item_indoor_light">室内灯延时设置</string>
    <string name="setting_item_indoor_light_opt">10S|20S|30S</string>
    <string name="setting_item_welcome_light">迎宾灯设置</string>
    <string name="setting_item_change_lane_flashing">变道闪烁</string>
    <string name="setting_item_change_lane_flashing_opt">1次|3次</string>
    <string name="setting_item_ihc">智能远光</string>
    <string name="voice_without_wake">语音免唤醒</string>
    <string name="setting_item_electronic_brake">电子驻车自动夹紧</string>
    <string name="setting_item_reset">胎压复位开关</string>
    <string name="edit_success">修改成功</string>
    <string name="saved">已保存</string>
    <string name="setting_item_scene_color_opt">白|黑|蓝|...</string>
    <string name="setting_item_scene_color">沉浸式音乐氛围灯</string>
    <string name="tire_pressure_reset">复位</string>
    <string name="theme_one">智慧光圈</string>
    <string name="theme_two">轻奢</string>
    <string name="theme_three">盗梦空间</string>
    <string name="content_ask_update">软件包下载已经完成，是否升级</string>
    <string name="content_ask_upload">有新版本D2.08.02.02，是否更新</string>
    <string name="content_ask_reset">是否恢复出厂设置，数据不可恢复，请谨慎操作</string>
    <string name="upgrading">升级中</string>
    <string name="updating">更新中</string>
    <string name="reset_error">异常情况，恢复失败</string>
    <string name="matched_devices">已配对设备</string>
    <string name="scan_devices">已搜到WIFI</string>
    <string name="have_been_deleted">已经删除</string>
    <string name="delete_failed">删除失败</string>
    <string name="driving_video">行车过程中观看视频</string>
    <string name="syc_time">同步网络时间</string>
    <string name="auto_zone">自动时区</string>
    <string name="searched_hotspot">已搜到热点</string>
    <string name="lock_control">门锁控制</string>
    <string name="ambient_light">氛围灯</string>
    <string name="seekbar_left_text">1</string>
    <string name="seekbar_right_text">10</string>
    <string name="open_wifi_ap">打开wifi热点</string>
    <string name="security_tips">需在汽车启动时使用</string>
    <string name="open_blt">打开蓝牙...</string>
    <string name="color_select_opt">无|挑逗|调情|放松|安静|舒服|安宁|冷清|热情|温暖|热闹|嘈杂</string>
    <string name="color_select_opt_one">无|挑逗|调情|放松|安静|舒服</string>
    <string name="color_select_opt_two">安宁|冷清|热情|温暖|热闹|嘈杂</string>
    <string name="log_car_vendor_extension_get_mirror">获取后视镜自动折叠:</string>
    <string name="log_car_vendor_extension_set_mirror">设置后视镜自动折叠:</string>
    <string name="log_car_vendor_extension_set_go_home">设置回家模式状态:</string>
    <string name="log_car_vendor_extension_get_go_home">获取回家模式状态：</string>
    <string name="log_car_vendor_extension_get_light_switch">获取氛围灯状态:</string>
    <string name="log_car_vendor_extension_set_light_switch">设置氛围灯状态:</string>
    <string name="log_car_vendor_extension_get_light_brightness">获取氛围灯亮度:</string>
    <string name="log_car_vendor_extension_set_light_brightness">设置氛围灯亮度:</string>
    <string name="log_car_vendor_extension_get_light_color">获取情景随动颜色:</string>
    <string name="log_car_vendor_extension_set_light_color">设置情景随动颜色:</string>
    <string name="log_car_vendor_extension_set_lane_change">设置变道闪烁:</string>
    <string name="log_car_vendor_extension_get_lane_change">获取变道闪烁:</string>
    <string name="log_car_vendor_extension_get_welcome_lamp_time">获取迎宾灯时间:</string>
    <string name="log_car_vendor_extension_set_welcome_lamp_time">设置迎宾灯时间:</string>
    <string name="log_car_vendor_extension_get_welcome_seat">获取座椅迎宾退让:</string>
    <string name="approaching_automatic_unlocking">走近自动解锁</string>
    <string name="remote_locking">走远自动闭锁</string>
    <string name="face_recognition_system">驾驶员状态监测</string>
    <string name="fatigue_reminder">疲劳提醒</string>
    <string name="sensitivity_adjustment">灵敏度调节</string>
    <string name="decentralized_reminder">注意力视野分散提醒</string>
    <string name="bad_driving_behavior_reminder">不良驾驶行为提醒</string>
    <string name="low_medium_high">低|中|高</string>
    <string name="safety_rearview_mirror">外后视镜随动</string>
    <string name="announcements">注意事项: \n1. 启动该功能后,在指定工况,镜片会自动调节角度。
        \n2. 为扩大视野且不丢失后方近车身区域安全视野,请将两侧镜片分别调节至刚好看到车身位置。
        \n3. 如对调节后镜片位置感到不适,可重新调节镜片或关闭此功能。</string>
</resources>