<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_setting_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/px_105"
            android:orientation="vertical">

            <com.xiaoma.setting.common.views.SwitchAnimation
                android:id="@+id/safety_brake"
                style="@style/style_switch_animation_car"
                android:layout_marginTop="@dimen/safety_brake_margin_top"
                app:switchText="@string/safety_brake_title">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.xiaoma.setting.common.views.RadioButtonLayout
                        android:id="@+id/safety_brake_opt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/go_home_margin_top"
                        android:paddingBottom="@dimen/go_home_margin_bottom"
                        app:buttonHeight="@dimen/blt_switch_height"
                        app:buttonNames="@string/safety_brake_text"
                        app:buttonWidth="@dimen/wrong_psw_dialog_width"
                        app:textSize="@dimen/default_switch_text_size" />

                    <View
                        android:id="@+id/safety_brake_line"
                        style="@style/line_car"/>
                </LinearLayout>


            </com.xiaoma.setting.common.views.SwitchAnimation>

            <com.xiaoma.setting.common.views.SettingItemView
                android:id="@+id/siv_lane"
                style="@style/style_setting_item_v2_car"
                app:segmentTexts="@string/safety_lane_text"
                app:titleTexts="@string/safety_lane_title"
                app:itemType="2"/>

            <View
                android:id="@+id/siv_lane_line"
                style="@style/line_car"/>

            <com.xiaoma.setting.common.views.SettingItemView
                android:id="@+id/siv_keep"
                style="@style/style_setting_item_v2_car"
                app:segmentTexts="@string/safety_keep_text"
                app:titleTexts="@string/safety_keep_title"
                app:itemType="2"/>

            <View
                android:id="@+id/siv_keep_line"
                style="@style/line_car"/>

            <com.xiaoma.setting.common.views.SwitchAnimation
                android:id="@+id/isa"
                style="@style/style_switch_animation_car"
                app:switchText="@string/safety_isa" />

            <View
                android:id="@+id/isa_line"
                style="@style/line_car"/>


            <com.xiaoma.setting.common.views.SwitchAnimation
                android:id="@+id/safety_daw"
                style="@style/style_switch_animation_car"
                android:visibility="gone"
                app:switchText="@string/safety_daw" />

            <View
                android:id="@+id/safety_daw_line"
                android:visibility="gone"
                style="@style/line_car"/>

        <com.xiaoma.setting.common.views.SwitchAnimation
            android:id="@+id/safety_rearview_mirror"
            style="@style/style_switch_animation_car"
            android:visibility="gone"
            app:switchText="@string/safety_rearview_mirror">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<com.xiaoma.setting.common.views.RadioButtonLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:paddingTop="@dimen/go_home_group_margin_top"-->
                    <!--android:paddingBottom="@dimen/go_home_group_margin_bottom"-->
                    <!--app:buttonHeight="@dimen/blt_switch_height"-->
                    <!--app:buttonNames="@string/rearview_L_R"-->
                    <!--app:buttonWidth="@dimen/wrong_psw_dialog_width"-->
                    <!--app:textSize="@dimen/default_switch_text_size" />-->

                <LinearLayout
                    android:layout_width="300px"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="25px">

                    <Button
                        android:id="@+id/mirror_left_button"
                        android:layout_width="161px"
                        android:layout_height="68px"
                        android:background="@drawable/bg_background_left"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:paddingBottom="8px"
                        android:text="Set_L"
                        android:textColor="@color/white"
                        android:textSize="30px" />

                    <Button
                        android:id="@+id/mirror_right_button"
                        android:layout_width="161px"
                        android:layout_height="68px"
                        android:layout_marginLeft="-19px"
                        android:background="@drawable/bg_background_right"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Set_R"
                        android:paddingBottom="8px"
                        android:textColor="@color/white"
                        android:textSize="30px" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/go_home_margin_top"
                    android:textSize="@dimen/secondary_font"
                    android:text="@string/announcements"
                    android:textColor="@color/secondary_color"/>
            </LinearLayout>

        </com.xiaoma.setting.common.views.SwitchAnimation>

            <View
                android:id="@+id/rearview_mirror_line"
                android:visibility="gone"
                style="@style/line_car"/>

            <com.xiaoma.setting.common.views.SwitchAnimation
                android:id="@+id/electronic_brake"
                style="@style/style_switch_animation_car"
                app:switchText="@string/setting_item_electronic_brake" />

            <View
                style="@style/line_car"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:gravity="center_vertical"
                android:visibility="gone">

                <TextView
                    style="@style/radio_group_text_car"
                    android:text="@string/setting_item_reset" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="@dimen/reset_width"
                    android:layout_height="@dimen/reset_height"
                    android:background="@drawable/bg_reset"
                    android:text="@string/tire_pressure_reset"
                    android:textSize="24px" />
            </LinearLayout>

            <com.xiaoma.setting.common.views.SwitchAnimation
                android:id="@+id/seat_belt"
                style="@style/style_switch_animation_car"
                app:switchText="@string/safety_seat_belt"
                android:layout_marginBottom="@dimen/px_80"/>


        </LinearLayout>
    </ScrollView>
</FrameLayout>